# tools

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
crates/minecraft-resource-pack/: Cargo.toml
crates/minecraft-resource-pack/src/: lib.rs
src/: main.tsx  router.tsx
src/components/: CommandPalette.tsx  ShortcutSheet.tsx  ToolCard.tsx  ToolIcon.tsx
src/components/ui/: Button.tsx  Card.tsx  FileDrop.tsx  Input.tsx  Kbd.tsx  Select.tsx  Sheet.tsx  Slider.tsx  Toggle.tsx
src/hooks/: useReducedMotion.ts
src/layouts/: Root.tsx
src/lib/: cn.ts  view-transitions.ts
src/pages/: About.tsx  Home.tsx  NotFound.tsx
src/styles/: index.css
src/tools/: registry.ts
src/tools/minecraft-resource-pack/: AdvancedMode.tsx  VanillaMode.tsx  meta.ts  route.tsx
src/tools/minecraft-resource-pack/components/: BuildButton.tsx  DiscConfigSheet.tsx  DiscPicker.tsx  ReplacementRow.tsx
src/tools/minecraft-resource-pack/hooks/: useMcPackWasm.ts
src/tools/minecraft-resource-pack/lib/: audio-encoder.ts  discs.ts  pack-builder.ts  state.ts
