[package]
name = "minecraft-resource-pack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "wav",
    "ogg",
    "pcm",
    "vorbis",
] }
thiserror = "1"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
